[package]
name = "loopback-capture"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Media_Audio",
    "Win32_Media_KernelStreaming",
    "Win32_Media_Multimedia",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Console",
    "Win32_System_Threading",
    "Win32_System_Variant",
]
